--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/harrison-brown-a34540101/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
             <li><a href="#" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
 						<li><a href="https://github.com/hrb90" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:harrisonrbrown90@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
@@ -82,24 +82,24 @@
                   <p>Some recent projects</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="http://slabb.herokuapp.com" class="image"><img src="images/slabb.png" alt="" /></a>
 											<div class="inner">
 												<h4>Slabb</h4>
 												<p>Slabb is a live chat full-stack web app inspired by Slack.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
 												<h4>Data Don't Lie</h4>
 												<p>Data Don't Lie is a data visualization platform for NBA statistics.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
 											<div class="inner">
 												<h4>ZeroOne</h4>
-												<p>ZeroOne is a fast and lightweight Javascript library for 0-1 integer linear programming.</p>
+												<p>ZeroOne is a fast and lightweight JavaScript library for 0-1 integer linear programming.</p>
 											</div>
 										</article>
 									</div>
@@ -459,7 +459,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: Read Only by <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Harrison Brown. All rights reserved.</li><li>Design: Read Only by <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
