Fix js project link

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ddl.png" alt="" /></a>
+											<a href="http://hrb90.github.io/ddl" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
 												<h4>Data Don't Lie</h4>
 												<p>Data Don't Lie is a data visualization platform for NBA statistics.</p>
