--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<a href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
 											<div class="inner">
 												<h4>ZeroOne</h4>
-												<p>ZeroOne is a fast and lightweight JavaScript library for 0-1 integer linear programming.</p>
+												<p>ZeroOne is a lightweight JavaScript library for 0-1 integer linear programming.</p>
 											</div>
 										</article>
 									</div>
