--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										with a passion for <a href="#three">building things</a>.</p>
 									</header>
                   <p>
-                    I am a software developer with experience in Ruby on Rails, Python, JavaScript, and React/Redux.
+                    I am a software developer with experience in Ruby on Rails, Python, JavaScript, and React/Redux. I am an effective communicator with exacting self-standards and a mind for the abstract. In my off hours you can find me geeking out over algorithms and sports data.
                   </p>
 								</div>
 							</section>
