Add angellist icon

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/harrison-brown-a34540101/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/hrb90" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a href="https://angel.co/harrison-brown-4" class="fa-angellist"><span class="label">AngelList</span></a></li>
 						<li><a href="mailto:harrisonrbrown90@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
