Various minor changes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										with a passion for <a href="#three">building things</a>.</p>
 									</header>
                   <p>
-                    I am a software developer with experience in Ruby on Rails, Python, JavaScript, and React/Redux. I am an effective communicator with exacting self-standards and a mind for the abstract. In my off hours you can find me geeking out over algorithms and sports data.
+                    I am a software developer with experience in Ruby on Rails, Python, HTML5/CSS3, JavaScript, and React/Redux. I am an effective communicator with exacting self-standards and a mind for the abstract. In my off hours you can find me geeking out over algorithms and sports data.
                   </p>
 								</div>
 							</section>
@@ -92,7 +92,7 @@
 											<a href="http://www.harrisonrbrown.com/ddl" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
 												<h4>Data Don't Lie</h4>
-												<p>Data Don't Lie is a data visualization platform for NBA statistics.</p>
+												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js.</p>
 											</div>
 										</article>
 										<article>
