--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 										with a passion for <a href="#three">building things</a>.</p>
 									</header>
                   <p>
-                    I am a software developer with experience in Ruby on Rails, Python, HTML5/CSS3, JavaScript, and React/Redux. I am an effective communicator with exacting self-standards and a mind for the abstract. In my off hours you can find me geeking out over algorithms and sports data.
+                    I am a full-stack software engineer with experience in Ruby on Rails, Python, HTML5/CSS3, JavaScript, and React/Redux. I am an effective pair programmer and fluent communicator with exacting self-standards and a mind for the abstract. In my off hours you can find me geeking out over algorithms and sports data.
                   </p>
 								</div>
 							</section>
@@ -65,12 +65,16 @@
 								<div class="container">
 									<h3>Skills</h3>
 									<ul class="feature-icons">
-										<li class="fa-code">Ruby on Rails</li>
+										<li class="fa-diamond">Ruby on Rails</li>
+										<li class="fa-diamond">RSpec</li>
                     <li class="fa-code">JavaScript</li>
                     <li class="fa-code">React/Redux</li>
-                    <li class="fa-code">Python</li>
 										<li class="fa-bar-chart">D3.js</li>
+										<li class="fa-code">Jest</li>
+                    <li class="fa-code">Python</li>
+										<li class="fa-cogs">scikit-learn</li>
 										<li class="fa-cubes">AWS</li>
+										<li class="fa-git">Git</li>
 									</ul>
 								</div>
 							</section>
@@ -85,7 +89,7 @@
 											<a href="http://slabb.herokuapp.com" class="image"><img src="images/slabb.png" alt="" /></a>
 											<div class="inner">
 												<h4>Slabb</h4>
-												<p>Slabb is a live chat full-stack web app inspired by Slack.</p>
+												<p>Slabb is a live chat full-stack web app inspired by Slack, with a Ruby on Rails backend and React UI.</p>
 											</div>
 										</article>
 										<article>
@@ -99,7 +103,7 @@
 											<a href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
 											<div class="inner">
 												<h4>ZeroOne</h4>
-												<p>ZeroOne is a lightweight JavaScript library for 0-1 integer linear programming.</p>
+												<p>ZeroOne is a lightweight JavaScript library with extensive test coverage for 0-1 integer linear programming.</p>
 											</div>
 										</article>
 									</div>
