--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
 										with a passion for <a href="#three">building things</a>.</p>
 									</header>
                   <p>
-                    I am a full-stack software engineer with experience in Ruby on Rails, Python, HTML5/CSS3, JavaScript, and React/Redux. I am an effective pair programmer and fluent communicator with exacting self-standards and a mind for the abstract. In my off hours you can find me geeking out over algorithms and sports data.
+                    I am a full-stack software engineer fluent in Ruby, Python, HTML5/CSS3, and JavaScript, and experienced in technologies including React.js, Redux, D3.js, Jest, Webpack, Rails, RSpec, scikit-learn, AWS, and Git.
+									</p>
+									<p>
+										I have a mind for the abstract, and with a background in pure math, excellent quantitative skills. My experience as a tutor makes me a patient pair programmer and strong communicator, and I hold myself and my code to very high standards.
                   </p>
+									<p>
+										In my off hours, you can catch me thinking about computational geometry, basketball statistics, Sichuan cuisine, or economic history.
+									</p>
 								</div>
 							</section>
 
