--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 											<a href="http://www.harrisonrbrown.com/ddl" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
 												<h4>Data Don't Lie</h4>
-												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js.</p>
+												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js. #WestbrookMVP</p>
 											</div>
 										</article>
 										<article>
