--- a/index.html
+++ b/index.html
@@ -94,21 +94,21 @@
 										<article>
 											<a href="http://slabb.herokuapp.com" class="image"><img src="images/slabb.png" alt="" /></a>
 											<div class="inner">
-												<h4>Slabb</h4>
+												<h4><a href="http://slabb.herokuapp.com">Slabb</a></h4>
 												<p>Slabb is a live chat full-stack web app inspired by Slack, with a Ruby on Rails backend and React UI.</p>
 											</div>
 										</article>
 										<article>
-											<a href="http://www.harrisonrbrown.com/ddl" class="image"><img src="images/ddl.png" alt="" /></a>
+											<a href="http://www.harrisonrbrown.com/ddl/index.html" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
-												<h4>Data Don't Lie</h4>
+												<h4><a href="http://www.harrisonrbrown.com/ddl/index.html">Data Don't Lie</a></h4>
 												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js. #WestbrookMVP</p>
 											</div>
 										</article>
 										<article>
 											<a href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
 											<div class="inner">
-												<h4>ZeroOne</h4>
+												<h4><a href="http://github.com/hrb90/zero-one">ZeroOne</a></h4>
 												<p>ZeroOne is a lightweight JavaScript library with extensive test coverage for 0-1 integer linear programming.</p>
 											</div>
 										</article>
