Add more data to DDL

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 											<a href="http://www.harrisonrbrown.com/ddl/index.html" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
 												<h4><a href="http://www.harrisonrbrown.com/ddl/index.html">Data Don't Lie</a></h4>
-												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js. #WestbrookMVP</p>
+												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js and Firebase. #WestbrookMVP</p>
 											</div>
 										</article>
 										<article>
