--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Skills</a></li>
 						<li><a href="#three">Projects</a></li>
-            <li><a href="./assets/resume.pdf">Resume</a></li>
+            <li><a target="_blank" href="./assets/resume.pdf">Resume</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/harrison-brown-a34540101/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/hrb90" class="icon fa-github"><span class="label">Github</span></a></li>
-            <li><a href="https://angel.co/harrison-brown-4" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
+						<li><a target="_blank" href="https://www.linkedin.com/in/harrison-brown-a34540101/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a target="_blank" href="https://github.com/hrb90" class="icon fa-github"><span class="label">Github</span></a></li>
+            <li><a target="_blank" href="https://angel.co/harrison-brown-4" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
 						<li><a href="mailto:harrisonrbrown90@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -92,23 +92,23 @@
                   <p>Some recent projects</p>
 									<div class="features">
 										<article>
-											<a href="http://slabb.herokuapp.com" class="image"><img src="images/slabb.png" alt="" /></a>
+											<a target="_blank" href="http://slabb.herokuapp.com" class="image"><img src="images/slabb.png" alt="" /></a>
 											<div class="inner">
-												<h4><a href="http://slabb.herokuapp.com">Slabb</a></h4>
+												<h4><a target="_blank" href="http://slabb.herokuapp.com">Slabb</a></h4>
 												<p>Slabb is a live chat full-stack web app inspired by Slack, with a Ruby on Rails backend and React UI.</p>
 											</div>
 										</article>
 										<article>
-											<a href="http://www.harrisonrbrown.com/ddl/index.html" class="image"><img src="images/ddl.png" alt="" /></a>
+											<a target="_blank" href="http://www.harrisonrbrown.com/ddl/index.html" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
-												<h4><a href="http://www.harrisonrbrown.com/ddl/index.html">Data Don't Lie</a></h4>
+												<h4><a target="_blank" href="http://www.harrisonrbrown.com/ddl/index.html">Data Don't Lie</a></h4>
 												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js and Firebase. #WestbrookMVP</p>
 											</div>
 										</article>
 										<article>
-											<a href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
+											<a target="_blank" href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
 											<div class="inner">
-												<h4><a href="http://github.com/hrb90/zero-one">ZeroOne</a></h4>
+												<h4><a target="_blank" href="http://github.com/hrb90/zero-one">ZeroOne</a></h4>
 												<p>ZeroOne is a lightweight JavaScript library with extensive test coverage for 0-1 integer linear programming.</p>
 											</div>
 										</article>
@@ -126,7 +126,7 @@
 										<h4>Text</h4>
 										<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 										This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-										This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+										This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a target="_blank" href="#">this is a link</a>.</p>
 										<hr />
 										<header>
 											<h4>Heading with a Subtitle</h4>
@@ -188,53 +188,53 @@
 												</ol>
 												<h5>Icons</h5>
 												<ul class="icons">
-													<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-													<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-													<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-													<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-													<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-													<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
+													<li><a target="_blank" href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+													<li><a target="_blank" href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+													<li><a target="_blank" href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+													<li><a target="_blank" href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+													<li><a target="_blank" href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+													<li><a target="_blank" href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
 												</ul>
 											</div>
 										</div>
 										<h5>Actions</h5>
 										<ul class="actions">
-											<li><a href="#" class="button special">Default</a></li>
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button alt">Default</a></li>
+											<li><a target="_blank" href="#" class="button special">Default</a></li>
+											<li><a target="_blank" href="#" class="button">Default</a></li>
+											<li><a target="_blank" href="#" class="button alt">Default</a></li>
 										</ul>
 										<ul class="actions small">
-											<li><a href="#" class="button special small">Small</a></li>
-											<li><a href="#" class="button small">Small</a></li>
-											<li><a href="#" class="button alt small">Small</a></li>
+											<li><a target="_blank" href="#" class="button special small">Small</a></li>
+											<li><a target="_blank" href="#" class="button small">Small</a></li>
+											<li><a target="_blank" href="#" class="button alt small">Small</a></li>
 										</ul>
 										<div class="row">
 											<div class="3u 6u(medium) 12u$(xsmall)">
 												<ul class="actions vertical">
-													<li><a href="#" class="button special">Default</a></li>
-													<li><a href="#" class="button">Default</a></li>
-													<li><a href="#" class="button alt">Default</a></li>
+													<li><a target="_blank" href="#" class="button special">Default</a></li>
+													<li><a target="_blank" href="#" class="button">Default</a></li>
+													<li><a target="_blank" href="#" class="button alt">Default</a></li>
 												</ul>
 											</div>
 											<div class="3u 6u$(medium) 12u$(xsmall)">
 												<ul class="actions vertical small">
-													<li><a href="#" class="button special small">Small</a></li>
-													<li><a href="#" class="button small">Small</a></li>
-													<li><a href="#" class="button alt small">Small</a></li>
+													<li><a target="_blank" href="#" class="button special small">Small</a></li>
+													<li><a target="_blank" href="#" class="button small">Small</a></li>
+													<li><a target="_blank" href="#" class="button alt small">Small</a></li>
 												</ul>
 											</div>
 											<div class="3u 6u(medium) 12u$(xsmall)">
 												<ul class="actions vertical">
-													<li><a href="#" class="button special fit">Default</a></li>
-													<li><a href="#" class="button fit">Default</a></li>
-													<li><a href="#" class="button alt fit">Default</a></li>
+													<li><a target="_blank" href="#" class="button special fit">Default</a></li>
+													<li><a target="_blank" href="#" class="button fit">Default</a></li>
+													<li><a target="_blank" href="#" class="button alt fit">Default</a></li>
 												</ul>
 											</div>
 											<div class="3u 6u$(medium) 12u$(xsmall)">
 												<ul class="actions vertical small">
-													<li><a href="#" class="button special small fit">Small</a></li>
-													<li><a href="#" class="button small fit">Small</a></li>
-													<li><a href="#" class="button alt small fit">Small</a></li>
+													<li><a target="_blank" href="#" class="button special small fit">Small</a></li>
+													<li><a target="_blank" href="#" class="button small fit">Small</a></li>
+													<li><a target="_blank" href="#" class="button alt small fit">Small</a></li>
 												</ul>
 											</div>
 										</div>
@@ -338,29 +338,29 @@
 									<section>
 										<h4>Buttons</h4>
 										<ul class="actions">
-											<li><a href="#" class="button special">Special</a></li>
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button alt">Alternate</a></li>
+											<li><a target="_blank" href="#" class="button special">Special</a></li>
+											<li><a target="_blank" href="#" class="button">Default</a></li>
+											<li><a target="_blank" href="#" class="button alt">Alternate</a></li>
 										</ul>
 										<ul class="actions">
-											<li><a href="#" class="button special big">Big</a></li>
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button alt small">Small</a></li>
+											<li><a target="_blank" href="#" class="button special big">Big</a></li>
+											<li><a target="_blank" href="#" class="button">Default</a></li>
+											<li><a target="_blank" href="#" class="button alt small">Small</a></li>
 										</ul>
 										<ul class="actions fit">
-											<li><a href="#" class="button special fit">Fit</a></li>
-											<li><a href="#" class="button fit">Fit</a></li>
-											<li><a href="#" class="button alt fit">Fit</a></li>
+											<li><a target="_blank" href="#" class="button special fit">Fit</a></li>
+											<li><a target="_blank" href="#" class="button fit">Fit</a></li>
+											<li><a target="_blank" href="#" class="button alt fit">Fit</a></li>
 										</ul>
 										<ul class="actions fit small">
-											<li><a href="#" class="button special fit small">Fit + Small</a></li>
-											<li><a href="#" class="button fit small">Fit + Small</a></li>
-											<li><a href="#" class="button alt fit small">Fit + Small</a></li>
+											<li><a target="_blank" href="#" class="button special fit small">Fit + Small</a></li>
+											<li><a target="_blank" href="#" class="button fit small">Fit + Small</a></li>
+											<li><a target="_blank" href="#" class="button alt fit small">Fit + Small</a></li>
 										</ul>
 										<ul class="actions">
-											<li><a href="#" class="button special icon fa-download">Icon</a></li>
-											<li><a href="#" class="button icon fa-download">Icon</a></li>
-											<li><a href="#" class="button alt icon fa-check">Icon</a></li>
+											<li><a target="_blank" href="#" class="button special icon fa-download">Icon</a></li>
+											<li><a target="_blank" href="#" class="button icon fa-download">Icon</a></li>
+											<li><a target="_blank" href="#" class="button alt icon fa-check">Icon</a></li>
 										</ul>
 										<ul class="actions">
 											<li><span class="button special disabled">Special</span></li>
@@ -469,7 +469,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Harrison Brown. All rights reserved.</li><li>Design: Read Only by <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Harrison Brown. All rights reserved.</li><li>Design: Read Only by <a target="_blank" href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
