--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Harrison Brown</a></h1>
-					<p>Software Developer</p>
+					<p>Software Engineer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -51,7 +51,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
-										<p>I'm a New York-based software developer<br />
+										<p>I'm a New York-based software engineer<br />
 										with a passion for <a href="#three">building things</a>.</p>
 									</header>
                   <p>
