Update header text

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
-										<p>I'm a New York-based software engineer<br />
-										with a passion for <a href="#three">building things</a>.</p>
+										<p>I'm a New York-based software engineer with a strong mathematical background and a passion for <a href="#three">building things</a>.</p>
 									</header>
                   <p>
                     I am a full-stack software engineer fluent in Ruby, Python, HTML5/CSS3, and JavaScript, and experienced in technologies including React.js, Redux, D3.js, Jest, Webpack, Rails, RSpec, scikit-learn, AWS, and Git.
@@ -61,7 +60,7 @@
 										I have a mind for the abstract, and with a background in pure math, excellent quantitative skills. My experience as a tutor makes me a patient pair programmer and strong communicator, and I hold myself and my code to very high standards.
                   </p>
 									<p>
-										In my off hours, you can catch me thinking about computational geometry, basketball statistics, Sichuan cuisine, or economic history.
+										In my off hours, I like to acquaint myself with vast empirical literatures.
 									</p>
 								</div>
 							</section>
