Break out math stuff

--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
                     I am a full-stack software engineer fluent in Ruby, Python, HTML5/CSS3, and JavaScript, and experienced in technologies including React.js, Redux, D3.js, Jest, Webpack, Rails, RSpec, scikit-learn, AWS, and Git.
 									</p>
 									<p>
-										I have a mind for the abstract, and with a background in pure math, excellent quantitative skills. My experience as a tutor makes me a patient pair programmer and strong communicator, and I hold myself and my code to very high standards.
+										I have a strong background in <a href="#four">pure math</a> and excellent quantitative skills. My experience as a tutor makes me a patient pair programmer and strong communicator, and I hold myself and my code to very high standards.
                   </p>
-									<p>
-										In my off hours, I like to acquaint myself with vast empirical literatures.
-									</p>
 								</div>
 							</section>
 
@@ -102,6 +99,22 @@
 											<div class="inner">
 												<h4><a target="_blank" href="http://www.harrisonrbrown.com/ddl/index.html">Data Don't Lie</a></h4>
 												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js and Firebase. #WestbrookMVP</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+							<section id="four">
+								<div class="container">
+									<h3>Math</h3>
+                  <p>I have a strong mathematical background including a </p>
+									<div class="features">
+										<article>
+											<a target="_blank" href="http://www.harrisonrbrown.com/slick-mongoose/index.html" class="image"><img src="images/slick.png" alt="" /></a>
+											<div class="inner">
+												<h4><a target="_blank" href="http://www.harrisonrbrown.com/slick-mongoose/index.html">Five-color theorem visualization</a></h4>
+												<p>A visualization of an algorithm that colors planar graphs with five colors.</p>
 											</div>
 										</article>
 										<article>
