More math stuff

--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
 							<section id="four">
 								<div class="container">
 									<h3>Math</h3>
-                  <p>I have a strong mathematical background including a </p>
+                  <p>I have a strong mathematical background including:</p>
+									<ul>
+										<li>Graduate level coursework in graph theory, theoretical computer science, and abstract algebra</li>
+										<li>Top-50 placement in the Putnam Competition, the "most prestigious university math completition in the world"</li>
+										<li>Multiple years of experience coaching middle and high schoul math teams</li>
+										<li>Multiple years of experience as a math tutor</li>
+									</ul>
+									<p>I continue to maintain a strong interest in mathematics; see below for some recent math-flavored projects.</p>
 									<div class="features">
 										<article>
 											<a target="_blank" href="http://www.harrisonrbrown.com/slick-mongoose/index.html" class="image"><img src="images/slick.png" alt="" /></a>
