--- a/index.html
+++ b/index.html
@@ -25,16 +25,14 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Projects</a></li>
-            <li><a target="_blank" href="./assets/resume.pdf">Resume</a></li>
+						<li><a href="#two">Math</a></li>
+						<li><a href="#three">Basketball</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
 						<li><a target="_blank" href="https://www.linkedin.com/in/harrison-brown-a34540101/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a target="_blank" href="https://github.com/hrb90" class="icon fa-github"><span class="label">Github</span></a></li>
-            <li><a target="_blank" href="https://angel.co/harrison-brown-4" class="icon fa-angellist"><span class="label">AngelList</span></a></li>
 						<li><a href="mailto:harrisonrbrown90@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -51,32 +49,29 @@
 								<div class="container">
 									<header class="major">
 										<h2>About me</h2>
-										<p>I'm a New York-based software engineer with a strong mathematical background and a passion for <a href="#three">building things</a>.</p>
+										<p>
+											Hi, I'm Harrison. 
+											I'm a Virginia-based programmer interested in <a href="#two">math, logic, type theory</a>, and <a href="#three">NBA basketball</a>.
+										</p>
 									</header>
                   <p>
-                    I am a full-stack software engineer fluent in Ruby, Python, HTML5/CSS3, and JavaScript, and experienced in technologies including React.js, Redux, D3.js, Jest, Webpack, Rails, RSpec, scikit-learn, AWS, and Git.
+                    I work for a DC-area startup building software testing tools. Before that I worked on visual mapping software at <a target="_blank" href="https://www.plectica.com/">Plectica</a>.
+										I'm also on <a target="_blank" href="https://github.com/hrb90">Github</a> and <a target="_blank" href="https://news.ycombinator.com/user?id=intuitionist">Hacker News</a> occasionally.
 									</p>
-									<p>
-										I have a strong background in <a href="#four">pure math</a> and excellent quantitative skills. My experience as a tutor makes me a patient pair programmer and strong communicator, and I hold myself and my code to very high standards.
-                  </p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Skills</h3>
-									<ul class="feature-icons">
-										<li class="fa-diamond">Ruby on Rails</li>
-										<li class="fa-diamond">RSpec</li>
-                    <li class="fa-code">JavaScript</li>
-                    <li class="fa-code">React/Redux</li>
-										<li class="fa-bar-chart">D3.js</li>
-										<li class="fa-code">Jest</li>
-                    <li class="fa-code">Python</li>
-										<li class="fa-cogs">scikit-learn</li>
-										<li class="fa-cubes">AWS</li>
-										<li class="fa-git">Git</li>
+									<h3>Math</h3>
+                  <p>
+										I have a strong mathematical background, including graduate level coursework in graph theory, theoretical computer science, and abstract algebra, and maintain a strong interest in math today. Some of my math-related projects include:
+									</p>
+									<ul>
+										<li><a target="_blank" href="http://www.harrisonrbrown.com/slick-mongoose/index.html">A visualization of an algorithm that colors planar graphs with five colors</a></li>
+										<li><a target="_blank" href="http://github.com/hrb90/zero-one">A lightweight JavaScript library for 0-1 integer linear programming</a></li>
+										<li><a target="_blank" href="https://www.youtube.com/watch?v=ooHrKt0Z1m4#t=14m">A talk on propositions as types and proofs as programs</a></li>
 									</ul>
 								</div>
 							</section>
@@ -84,51 +79,16 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Projects</h3>
-                  <p>Some recent projects</p>
+									<h3>Basketball</h3>
+                  <p>
+										I'm interested in the NBA, and in NBA statistics.
+									</p>
 									<div class="features">
-										<article>
-											<a target="_blank" href="http://slabb.herokuapp.com" class="image"><img src="images/slabb.png" alt="" /></a>
-											<div class="inner">
-												<h4><a target="_blank" href="http://slabb.herokuapp.com">Slabb</a></h4>
-												<p>Slabb is a live chat full-stack web app inspired by Slack, with a Ruby on Rails backend and React UI.</p>
-											</div>
-										</article>
 										<article>
 											<a target="_blank" href="http://www.harrisonrbrown.com/ddl/index.html" class="image"><img src="images/ddl.png" alt="" /></a>
 											<div class="inner">
 												<h4><a target="_blank" href="http://www.harrisonrbrown.com/ddl/index.html">Data Don't Lie</a></h4>
-												<p>Data Don't Lie is an interactive data visualization platform for NBA statistics, built using D3.js and Firebase. #WestbrookMVP</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-							<section id="four">
-								<div class="container">
-									<h3>Math</h3>
-                  <p>I have a strong mathematical background including:</p>
-									<ul>
-										<li>Graduate level coursework in graph theory, theoretical computer science, and abstract algebra</li>
-										<li>Top-50 placement in the Putnam Competition, the "most prestigious university math completition in the world"</li>
-										<li>Multiple years of experience coaching middle and high schoul math teams</li>
-										<li>Multiple years of experience as a math tutor</li>
-									</ul>
-									<p>I continue to maintain a strong interest in mathematics; see below for some recent math-flavored projects.</p>
-									<div class="features">
-										<article>
-											<a target="_blank" href="http://www.harrisonrbrown.com/slick-mongoose/index.html" class="image"><img src="images/slick.png" alt="" /></a>
-											<div class="inner">
-												<h4><a target="_blank" href="http://www.harrisonrbrown.com/slick-mongoose/index.html">Five-color theorem visualization</a></h4>
-												<p>A visualization of an algorithm that colors planar graphs with five colors.</p>
-											</div>
-										</article>
-										<article>
-											<a target="_blank" href="http://github.com/hrb90/zero-one" class="image"><img src="images/zero-one.png" alt="" /></a>
-											<div class="inner">
-												<h4><a target="_blank" href="http://github.com/hrb90/zero-one">ZeroOne</a></h4>
-												<p>ZeroOne is a lightweight JavaScript library with extensive test coverage for 0-1 integer linear programming.</p>
+												<p>An interactive data visualization platform for NBA statistics</p>
 											</div>
 										</article>
 									</div>
